Add flutter_test to dev dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,11 @@ dependencies:
   uuid: ^1.0.0
   path_provider: ^0.4.1
 
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
